k8s/listings-updater.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hericarealtor-listings-updater
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hericarealtor-listings-updater
  template:
    metadata:
      labels:
        app: hericarealtor-listings-updater
    spec:
      containers:
        - name: listings-updater
          image: ghcr.io/justgu1/hericarealtor-listings-updater:latest
          ports:
            - name: http
              containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: hericarealtor-listings-updater
  namespace: apps
spec:
  selector:
    app: hericarealtor-listings-updater
  ports:
    - name: http
      port: 8001
      targetPort: http
