k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hericarealtor
  namespace: apps
spec:
  selector:
    app: hericarealtor
  ports:
    - name: http
      port: 8000
      targetPort: http
