k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hericarealtor-tls
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hericarealtor.com`) || Host(`www.hericarealtor.com`)
      kind: Rule
      services:
        - name: hericarealtor
          port: 8000
  tls:
    certResolver: letsencrypt
